--- a/solution.ipynb
+++ b/solution.ipynb
@@ -3308,7 +3308,10 @@
     "\n",
     "Наша система должна предлагать лучшего кандидата(ов) для задачи в зависимости от покрытия целевых навыков, средних оценок по задаче и скорости выполнения.\n",
     "\n",
-    "Пример: для группы поручений 3 (очень опасные) нужно иметь навык лекаря, рекомендательная система не должна предлагать героев, у которых этот навык равен 0. Либо она может предложить команду, где обязательно один герой должен иметь навык лекаря\n",
+    "Пример: для группы поручений 3 (очень опасные) нужно иметь навык лекаря, рекомендательная система не должна предлагать героев, у которых этот навык равен 0. Либо она может предложить команду, где обязательно один герой должен иметь навык лекаря.\n",
+    "\n",
+    "- Принимаем следующее допущение:\n",
+    "\n",
     "\n",
     "Мы определились, что нашим критерием для набора команды будет покрытие всех целевых действий. Если один герой покрывает все действия своими навыками, то ему не нужна команда, он может справиться сам. Плюсом это экономит человекоресурсы и оптимизирует выполнение задач, так как остаётся больше незанятых персонажей.\n",
     "\n",
@@ -4719,7 +4722,9 @@
    "source": [
     "- Поиск лучшего алгоритма для кластеризации заданий\n",
     "- Алгоритм для расчёта предсказательного количества дней для выполнения задания командой. Это позволит продвигать выше скор команды и выбирать её для выполнения поручения\n",
-    "- Алгоритм действий при переполнении поручений и срыве сроков. В данных условиях поручения достаточно редкие и герои успевают выполнять их и отдохнуть. Однако если будет завал и система не сможет предложить никого, так как все будут заняты, будут проблемы."
+    "- Алгоритм действий при переполнении поручений и срыве сроков. В данных условиях поручения достаточно редкие и герои успевают выполнять их и отдохнуть. Однако если будет завал и система не сможет предложить никого, так как все будут заняты, будут проблемы.\n",
+    "- Скрипт, который формирует tasks_table из исходных данных (выполняет кластеризацию с присвоением номера группы)\n",
+    "- Улучшением рексис. Использование более подходящих моделей для анализа описания и извлечения скрытых зависимостей. Графовые нейронные сети могут стать применимы если между героями будет связь или совместная работа, такие связи будут учитываться при подборе героев."
    ]
   }
  ],
