Last upd solution

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -2708,6 +2708,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Для пущей  уверенности разделим данные об оценках и сумме вознаграждения на группу 0 и 1, в первой будут наблюдения выполненных заданий, во второй невыполненных. Сравним эти группы по таким признакам как оценки и сумма вознаграждения."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Оценка за качество: Нет статистической разницы между группами.\n",
+      "Оценка по срокам: Нет статистической разницы между группами.\n",
+      "Оценка за вежливость: Нет статистической разницы между группами.\n",
+      "Сумма вознаграждения: Нет статистической разницы между группами.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import mannwhitneyu\n",
+    "\n",
+    "data_0 = all_data[all_data['Выполнено'] == 'да']\n",
+    "data_1 = all_data[all_data['Выполнено'] != 'да']\n",
+    "\n",
+    "def mann_whitney_tests(columns):\n",
+    "    results = {}\n",
+    "    for column in columns:\n",
+    "        data0 = data_0[column]\n",
+    "        data1 = data_1[column]\n",
+    "        stat, pvalue = mannwhitneyu(data0, data1)\n",
+    "        \n",
+    "        if pvalue <= 0.05:\n",
+    "            results[column] = \"Есть статистическая разница между группами.\"\n",
+    "        else:\n",
+    "            results[column] = \"Нет статистической разницы между группами.\"\n",
+    "\n",
+    "    return results\n",
+    "\n",
+    "columns = [\"Оценка за качество\", \"Оценка по срокам\", \"Оценка за вежливость\", 'Сумма вознаграждения']\n",
+    "mann_whitney_results = mann_whitney_tests(columns)\n",
+    "\n",
+    "for column, result in mann_whitney_results.items():\n",
+    "    print(f\"{column}: {result}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Нет разницы в оценках и сумме вознаграждений для выполненных и невыполненных заданий, поэтому не будем говорить, что задания герои не выполнили только потому, что им не хватило команды"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Мы знаем, что каждый герой обладает своими навыками, например кто-то имеет навык лекаря,а у кого-то он равен 0 из таблицы hero_abilities. Посмотрим какие целевые действия выполнялись у поручений разных групп, чтобы сформировать список необходимых навыков, которые должен покрывать кандидат или команда кандидатов."
    ]
   },
